--- a/jobs-api/awsconfig.json
+++ b/jobs-api/awsconfig.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIAV7LH75ZK24SAIYFY",
-  "secretAccessKey": "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",
+  "accessKeyId": "AKIAV7LH75ZKSHH3BAFP",
+  "secretAccessKey": "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",
   "region": "us-east-1"
 }
