--- a/scrapper/awsconfig.json
+++ b/scrapper/awsconfig.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIAV7LH75ZKSHH3BAFP",
-  "secretAccessKey": "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",
+  "accessKeyId": "ACCESS_KEY",
+  "secretAccessKey": "SECRET_ACCESS_KEY",
   "region": "us-east-1"
 }
